unpackaged/config/qa/objects/CustomObject1__c.object
<CustomObject>
    <fields>
        <fullName>C1_currency2__c</fullName>
        <label>C1_currency2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C1_currency__c</fullName>
        <label>C1_currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C1_date__c</fullName>
        <label>C1_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C1_number__c</fullName>
        <label>C1_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C1_phone__c</fullName>
        <label>C1_phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C1_picklist__c</fullName>
        <label>C1_picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
                <value>
                    <fullName>Option4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C1_text2__c</fullName>
        <label>C1_text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_text__c</fullName>
        <label>C1_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_textarea__c</fullName>
        <label>C1_textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C1_url__c</fullName>
        <label>C1_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CustomObject1s</relationshipLabel>
        <relationshipName>CustomObject1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CustomObject1</label>
    <nameField>
        <label>CustomObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>